# Sistema-Curriculos-2

./: README.markdown  pyproject.toml  requirements.txt
app/: __init__.py  models.py  routes.py
